AC_INIT(src/xfsctl.c)
AC_PACKAGE_GLOBALS(xfstests)
AC_PACKAGE_UTILITIES(xfstests)

AC_PACKAGE_NEED_UUID_H
AC_PACKAGE_NEED_UUIDCOMPARE

AC_PACKAGE_NEED_XFS_LIBXFS_H
AC_PACKAGE_NEED_XFSCTL_MACRO
AC_PACKAGE_NEED_LIBXFSINIT_LIBXFS
AC_PACKAGE_NEED_XFS_HANDLE_H
AC_PACKAGE_NEED_ATTRLIST_LIBHANDLE

AC_PACKAGE_NEED_ATTR_XATTR_H
AC_PACKAGE_NEED_GETXATTR_LIBATTR
AC_PACKAGE_NEED_SYS_ACL_H
AC_PACKAGE_NEED_ACL_LIBACL_H
AC_PACKAGE_NEED_ACLINIT_LIBACL

AC_PACKAGE_WANT_LIBGDBM

AC_OUTPUT(include/builddefs)
