dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/common/cmd/read_invis.c)

AM_INIT_AUTOMAKE(dmapi_tests, 1.1)

dnl support for cross-compiling
AC_ARG_PROGRAM

AC_PROG_CC

AM_PROG_LIBTOOL

AC_PREFIX_DEFAULT(/usr/local/dmapi_tests)

dnl Checks for programs.

dnl Checks for libraries.
AC_CHECK_LIB(handle,fssetdm_by_handle)
AC_CHECK_LIB(dm,dm_init_service)

dnl Checks for header files.
AC_CHECK_HEADERS(xfs/dmapi.h,have_xfs_dmapi_h=1)
AC_CHECK_HEADERS(sys/dmi.h)

CPPFLAGS="-I\$(top_srcdir)/src/common"
if test "$have_xfs_dmapi_h" = 1; then
CPPFLAGS="$CPPFLAGS -I/usr/include/xfs"
fi

AC_SUBST(CPPFLAGS)


AC_OUTPUT( \
Makefile \
src/Makefile \
src/common/Makefile \
src/common/cmd/Makefile \
src/common/lib/Makefile \
src/suite1/Makefile \
src/suite1/cmd/Makefile \
src/sample_hsm/Makefile \
src/simple/Makefile \
src/suite2/Makefile \
src/suite2/src/Makefile \
)
