## Process this file with automake to produce Makefile.in

##
## Copyright (c) 2000-2002 Silicon Graphics, Inc.  All Rights Reserved.
##

bin_PROGRAMS =  \
	test_rights \
	test_fileattr \
	test_hole \
	test_dmattr \
	test_eventlist \
	test_region \
	test_bulkall \
	test_bulkattr \
	send_msg \
	dm_test_daemon \
	test_invis \
	invis_test \
	region_test \
	test_efault \
	mmap

INCLUDES = -I ..

LDADD = $(top_builddir)/src/common/lib/libdmtest.la
